==> reweiser3/freETarget/Software/ESP32/tcp_server/main/diag_tools.c <==
#include "freETarget.h"
#include "gpio.h"
#include "diag_tools.h"
#include "nonvol.h"
#include "analog_io.h"
#include "token.h"            // Time provided by the token ring
#include "json.h"
#include "stdio.h"
#include "esp_random.h"
#include "compute_hit.h"
#include "math.h"
#include "serial_io.h"
#define TICK(x) (((x) / 0.33) * OSCILLATOR_MHZ)   // Distance in clock ticks
#define RX(Z,X,Y) (16000 - (sqrt(sq(TICK(x)-s[(Z)].x) + sq(TICK(y)-s[(Z)].y))))
#define GRID_SIDE 25                              // Should be an odd number
#define TEST_SAMPLES ((GRID_SIDE)*(GRID_SIDE))

void self_test
(
  unsigned int test                 // What test to execute
)
{
  unsigned int i;
  char         ch;
  unsigned int sensor_status;       // Sensor running inputs
  unsigned long sample;             // Sample used for comparison
  unsigned int random_delay;        // Random sampe time
  bool_t       pass;
  shot_record_t shot;               // Shot history
  char s[128];             // Text buffer
  double       volts;

/*
 *  Update the timer
 */
  tick++;
  volts = TO_VOLTS(analogRead(V_REFERENCE));
  
/*
 * Figure out what test to run
 */
  switch (test)
  {
/*
 * Test 0, Display the help
 */
    default:                // Undefined, show the tests
    case T_HELP:                
      printf("\r\n 1 - Digital inputs");
      printf("\r\n 2 - Counter values (internal trigger)");
      printf("\r\n 3 - Advance paper backer");
      printf("\r\n 4 - Spiral Unit Test");
      printf("\r\n 5 - Grid calibration pattern");
      printf("\r\n 6 - One time calibration pattern");
      printf("\r\n 7 - Grid calibration pattern");
      printf("\r\n 8 - Aux port passthrough");
      printf("\r\n 9 - Calibrate"); 
      printf("\r\n10 - Transfer loopback");
      printf("\r\n11 - Serial port test");
      printf("\r\n12 - LED brightness test");
      printf("\r\n13 - Face strike test");
      printf("\r\n14 - WiFi test");
      printf("\r\n15 - Dump NonVol");
      printf("\r\n16 - Send sample shot record");
      printf("\r\n17 - Show WiFi status");
      printf("\r\n18 - Send clock out of all serial ports");
      printf("\r\n19 - Unit Test speed_of_sound()");
      printf("\r\n20 - Token Ring Test()");
      printf("\r\n21 - Count on the LEDs");
      printf("\r\n");
      break;

/*
 * Test 1, Display GPIO inputs
 */
    case T_DIGITAL: 
      digital_test();
      break;

/*
 * Test 2, 3, Test the timing circuit
 */
    case T_TRIGGER:                       // Show the timer values (Wait for analog input)
      printf("\r\nWaiting for Trigger\r\n");
    case T_CLOCK:                        // Show the timer values (Trigger input)
      stop_timers();
      arm_timers();

      set_LED(L('*', '-', '-'));
      
      if ( test == T_CLOCK )
      {
        if ( revision() >= REV_220 )  
        {
          random_delay = esp_random() % 6000;   // Pick a random delay time in us
          printf("\r\nRandom clock test: %dus. All outputs must be the same. ", random_delay);
          trip_timers();
          delayMicroseconds(random_delay);  // Delay a random time
        }
        else
        {
          printf("\r\nThis test not supported on this hardware revision");
          break;
        }
      }
  
      while ( !is_running() )
      {
        continue;
      }
      sensor_status = is_running();       // Remember all of the running timers
      stop_timers();
      read_timers(&shot.timer_count[0]);

      if ( test == T_CLOCK )       // Test the results
      {
        sample = shot.timer_count[N];
        pass = true;

        for(i=N; i<=W; i++)
        {
          if ( shot.timer_count[i] != sample )
          {
            pass = false;                 // Make sure they all match
          }
        }

        if ( pass == true )
        {
          printf(" PASS\r\n");
        }
        else
        {
          printf(" FAIL\r\n");
        }
      }
      send_timer(sensor_status);
      
      set_LED(L('-', '-', '-'));
      delay(ONE_SECOND);
      break;

/*
 * Test 6, Advance the paper
 */
    case T_PAPER: 
      printf("\r\nAdvancing backer paper %dms  %d steps", ((json_paper_time) + (json_step_time)) * 10, json_step_count);
      drive_paper();
      printf("\r\nDone");
      break;

/*
 * Test 7, 8, 9, Generate test pattern for diagnosing software problems
 */
    case T_SPIRAL: 
      printf("\r\nSpiral Calculation\r\n");
      unit_test( T_SPIRAL );            // Generate a spiral
      break;

    case T_GRID:
      printf("\r\nGrid Calculation\r\n");
      unit_test( T_GRID);               // Generate a grid
      break;  
      
    case T_ONCE:
      printf("\r\nSingle Calculation\r\n");
      unit_test( T_ONCE);               // Generate a SINGLE calculation
      break;

/*
 * Test 10, Test the pass through connector
 */
    case T_PASS_THRU:
      printf("\r\nPass through active.  Cycle power to exit\r\n");
      while (1)
      {
        if ( serial_available(CONSOLE))
        {
          ch = serial_getch(CONSOLE);
          char_to_all(ch, AUX);
        }
        if ( serial_available(AUX))
        {
          ch = serial_getch(AUX);
          char_to_all(ch, CONSOLE);
        }
      }
      break;

/*
 * Test 11
 */
    case T_SET_TRIP:
      set_trip_point(0);          // Stay in the trip point loop
      break;

/*
 * Test 13
 */
    case T_SERIAL_PORT:
      serial_to_all("\r\nArduino Serial Port: Hello World\r\n", true, true);
      break;

/* 
 *  Test 14
 */
    case T_LED:
      printf("\r\nRamping the LED");
      for (i=0; i != 256; i++)
      {
        analogWrite(LED_PWM, i);
        delay(ONE_SECOND/50);
      }
      for (i=255; i != -1; i--)
      {
        analogWrite(LED_PWM, i);
        delay(ONE_SECOND/50);
      }
      analogWrite(LED_PWM, 0);
      printf(" Done\r\n");
      break;

 /*
  * Test 15
  */
    case T_FACE:
      printf("\r\nFace strike test\n\r");
      face_strike = 0;                        // Reset the interrupt count
      sample = 0;
      enable_face_interrupt();
      ch = 0;
      
      while ( ch != '!' )
      {        
        if ( face_strike != 0 )
        {
          face_strike--;
          set_LED(L('*', '*', '*'));           // If something comes in, turn on all of the LEDs 
        }
        else
        {
          set_LED(L('.', '.', '.'));          // face_strike complete
        }
        if ( sample != face_strike )          // If there is a change, display it
        {
          if ( (face_strike % 20) == 0 )
          {
            printf("\r\n");
          }
          printf(" S: %d", face_strike);
          sample = face_strike;        
        }
        ch = get_all(ALL);
    }
    printf("\r\nDone\n\r");
    break;

 /*
  * TEST 16 WiFI
  */
   case T_WIFI:
   break;

/*
 * TEST 17 Dump NonVol
 */
   case T_NONVOL:
    dump_nonvol();
   break;

  
/*
 * Test 18 Sample shot value 
 */
  case T_SHOT:
#if ( CLOCK_TEST )
    printf(" Shot Test using entered values"); // {"NC":30, "EC":0, "SC":80, "WC":83, "TEST":18} 
    is_trace = 0x255;       // Turn on all tracing
    shot.face_strike = 0;
    shot.timer_count[N] = 4096 - json_clock[N];
    shot.timer_count[E] = 4096 - json_clock[E];
    shot.timer_count[S] = 4096 - json_clock[S];
    shot.timer_count[W] = 4096 - json_clock[W];
    compute_hit(&shot);
#else
    shot.x = 10;
    shot.y = 20;
#endif
    shot.shot_time = (FULL_SCALE - in_shot_timer);
    shot.shot_number = 1;
    send_score(&shot);
    break;
    
 /*
  * TEST 19 WiFi Status
  */
   case T_WIFI_STATUS:
   break;
   
 /*
  * TEST 20 WiFi Broadcast
  */
   case T_WIFI_BROADCAST:
    serial_to_all("Type ! to exit ", ALL); 
    ch = 0;
    while( ch != '!' )
    {
      i = millis() / 1000;
      if ( (i % 60) == 0 )
      {
        sprintf(&s, "\r\n%d:%d ", i/60, i % 60);
        serial_to_all(s, ALL);
      }
      else
      {
      sprintf(&s, " %d:%d ", i/60, i % 60);
      serial_to_all(s, ALL);
      }
    }
    sprintf(s, "\r\nDone");
   break;
   
/*
 * Test 26 Test speed_of_sound()
 */
  case T_S_OF_SOUND:
    sound_test();
    printf("\n\rDone");
    break;

/*
 * Test 27 Token Ring Test
 */
  case T_TOKEN:
    token_init();
    printf("\n\rDone");
    break;

/*
 * Test 28 Cycle the LEds
 */
  case T_LED_CYCLE:
    i = 0;
    while ( !json_spool_available() )                     // Keep blinking the LEDs
    {
      set_LED( (i>>0) & 1, (i>>1) & 1, (i>>2)&1 );
      delay(ONE_SECOND/2);
      i++;
      token_poll();                                       // Until something arrives
    }
    printf("\n\rDone");
    break;
  }
 
 /* 
  *  All done, return;
  */
    return;
}

 bool_t POST_counters(void)
 {
   unsigned int i, j;            // Iteration counter
   unsigned int random_delay;    // Delay duration
   unsigned int sensor_status;   // Sensor status
   int          x;               // Time difference (signed)
   bool_t       test_passed;     // Record if the test failed
   long         now;             // Current time
   
/*
 * The test only works on V2.2 and higher
 */

  if ( revision() < REV_300 )
  {
    return true;                      // Fake a positive response  
  }
  
  if ( DLT(DLT_CRITICAL) )
  {
    printf("POST_counters()");
  }

  test_passed = true;                 // And assume that it will pass
  
/*
 * Test 1, Arm the circuit and see if there are any random trips
 */
  stop_timers();                      // Get the circuit ready
  arm_timers();                       // Arm it. 
  delay(1);                           // Wait a millisecond  
  sensor_status = is_running();       // Remember all of the running timers
  if ( (sensor_status != 0) && DLT(DLT_CRITICAL) )
  {
    printf("\r\nFailed Clock Test. Spurious trigger:"); show_sensor_status(sensor_status);
    return false;                     // No point in any more tests
  }
  
/*
 * Loop and verify the opertion of the clock circuit using random times
 */
  for (i=0; i!= POST_counteres_cycles; i++)
  {
    
/*
 *  Test 2, Arm the circuit amd make sure it is off
 */
    stop_timers();                    // Get the circuit ready
    arm_timers();
    delay(1);                         // Wait for a bit
    
    for (j=N; j <= W; j++ )           // Check all of the counters
    {
      if ( (read_counter(j) != 0) && DLT(DLT_CRITICAL) )     // Make sure they stay at zero
      {
        printf("Failed Clock Test. Counter free running: %c", nesw[j]);
        test_passed =  false;         // return a failed test
      }   
    }
    
 /*
  * Test 3: Trigger the counter and make sure that all sensors are triggered
  */
    stop_timers();                      // Get the circuit ready
    arm_timers();
    delay(1);  
    random_delay = esp_random() % 6000; // Pick a random delay time in us
    now = micros();                     // Grab the current time
    trip_timers();
    sensor_status = is_running();       // Remember all of the running timers

    while ( micros() < (now + random_delay ) )
    {
      continue;
    }
    
    stop_timers();
    if ( (sensor_status != 0x0F) && DLT(DLT_CRITICAL) )      // The circuit was triggered but not all
    {                                 // FFs latched
      printf("Failed Clock Test. sensor_status:"); show_sensor_status(sensor_status);
      test_passed = false;
    }

/*
 * Test 4: Stop the clock and make sure that the counts have stopped
 */
    random_delay *= 8;                // Convert to clock ticks
    for (j=N; j <= W; j++ )           // Check all of the counters
    {
      x  = read_counter(j);
      if ( (read_counter(j) != x) && DLT(DLT_CRITICAL) )
      {
        printf("Failed Clock Test. Counter did not stop: %c", nesw[j]); show_sensor_status(sensor_status);
        test_passed = false;          // since there is delay  in
      }                               // Turning off the counters
 
/*
 * Test 5: Verify that the counts are correct
 */
      x =x - random_delay;
      if( x < 0 )
      {
        x = -x;
      }
      
      if ( (x > CLOCK_TEST_LIMIT) && DLT(DLT_CRITICAL) )     // The time should be positive and within limits
      { 
        printf("Failed Clock Test. Counter: %c  Is: %d  Should be: %d   Delta: %d", nesw[j], read_counter(j), random_delay, x);
        test_passed = false;          // since there is delay  in
      }                               // Turning off the counters
    }
  }
  
/*
 * Got here, the test completed successfully
 */
  set_LED(L('.', '.', '.'));
  return test_passed;
}

bool_t do_dlt
  (
  unsigned int level
  )
{ 
  char s[20], str[20];

  if ((level & (is_trace | DLT_CRITICAL)) == 0 )
  {
    return false;      // Send out if the trace is higher than the level 
  }

  dtostrf(micros()/1000000.0, 7, 6, str );
  sprintf(s, "\n\r%s: ", str);
  Serial.print(s);

  return true;
}
